--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
 	<body>
+		<div id="text">
+			<h1>Broken</h1>
+			<p>This paragraph should be centered and justified and have a different font family to the rest of the page.</p>
 
-		<h1>Broken</h1>
-		<p>Broken Paragraph</p>
+		</div>
 
 		<ul class="interactive-list">
-			<li>Version COntrol</li>
+			<li>Version Control</li>
 			<li>Git</li>
 			<li>GitHub</li>
 			<li>GitHub Desktop</li>
@@ -22,7 +24,7 @@
 		<button class="colour-btns" onClick="changeCol('green')">Green</button>
 		<button class="colour-btns" onClick="changeCol('blue')">Blue</button>
 		<button class="colour-btns" onClick="changeCol('yellow')">Yellow</button>
-		<button class="colour-btns" onClick="changeCol('orange')">Orange</button>
+		<button class="colour-btns" onClick="changeCol('orange')">Orange</button><br /><br />
 
 		<!-- Image slideshow 3 seconds -->
 		<img id="slider" class="centre" src="img/cat" alt="pets">
