--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<script src="js/script.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
-	<body>
+	<body id="body">
 		<div id="text">
 			<h1>Broken</h1>
 			<p>This paragraph should be centered and justified and have a different font family to the rest of the page.</p>
